--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
       username: root
       password: 123456
   redis:
-    host: localhost
+    host: 127.0.0.1
     port: 6379
     password:
     database: 0
