使用Spring Cache缓存套餐数据

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,10 @@ spring:
     port: 6379
     password:
     database: 0
+  cache:
+    redis:
+      time-to-live: 1800000 #设置缓存有效时间
+    type: redis
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
